# Coco

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: add_external.cmake
example/: CMakeLists.txt  block_on_example.cpp  chain_example.cpp  channel_example.cpp  condvar_example.cpp  draft.cpp  example.cpp  heavy_task.cpp  latch_example.cpp  main.cpp  mutex_example.cpp  rwlock_example.cpp  simple_server.cpp  tcp_example.cpp  udp_example.cpp  wait_example.cpp
include/: defer.hpp  handle.hpp  mt_executor.hpp  proactor.hpp  runtime.hpp  task.hpp  timer.hpp  uring.hpp  woker_job.hpp  worker_job.hpp
include/coco/: __preclude.hpp  blocking_executor.hpp  defer.hpp  inl_executor.hpp  inline_executor.hpp  mt_executor.hpp  net.hpp  proactor.hpp  runtime.hpp  sync.hpp  task.hpp  timer.hpp  uring.hpp  worker_job.hpp
include/coco/net/: listener.hpp  socket.hpp  socket_addr.hpp  socket_awaiters.hpp  stream.hpp
include/coco/sync/: chain.hpp  channel.hpp  condvar.hpp  latch.hpp  mutex.hpp  rwlock.hpp
include/coco/sys/: fd.hpp  file.hpp  file_awaiters.hpp  listener.hpp  socket.hpp  socket_addr.hpp  socket_awaiters.hpp  stream.hpp  udp_socket.hpp
include/coco/util/: fixed_vec.hpp  heap.hpp  intr_ptr.hpp  lockfree_queue.hpp  panic.hpp  queue.hpp  ring_buffer.hpp  spsc_queue.hpp
include/util/: heap.hpp  intr_ptr.hpp  lockfree_queue.hpp  queue.hpp
src/: inl_executor.cpp  mt_executor.cpp  timer.cpp  uring.cpp
src/sys/: socket_addr.cpp
test/: CMakeLists.txt  timer_test.cpp
